New version of software, tested. Some minor bugs to be corrected
